Remove extra code, squash some tests